force-app/main/default/objects/AOP_Slab__c/AOP_Slab__c.object-meta.xml
<CustomObject>
    <label>AOP Slab</label>
    <nameField>
        <displayFormat>AOPS-{0000}</displayFormat>
        <label>AOP Slab Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AOP Slab</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>