force-app/main/default/objects/AOP_Slab__c/fields/AOP__c.field-meta.xml
<CustomField>
    <fullName>AOP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AOP</label>
    <referenceTo>AOP__c</referenceTo>
    <relationshipLabel>AOP Slab</relationshipLabel>
    <relationshipName>AOP_Slab</relationshipName>
    <type>Lookup</type>
</CustomField>