force-app/main/default/objects/AOP_Slab__c/fields/Brokerage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Rate__c</fullName>
    <label>Brokerage Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>