force-app/main/default/objects/AOP_Slab__c/fields/Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lower_Limit__c</fullName>
    <label>Lower Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>