force-app/main/default/objects/AOP_Slab__c/fields/Slab_Name__c.field-meta.xml
<CustomField>
    <fullName>Slab_Name__c</fullName>
    <label>Slab Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>