force-app/main/default/objects/AOP_Slab__c/fields/Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Upper_Limit__c</fullName>
    <label>Upper Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>